# Summarizer_AI

./: .env  .env.example  .replit  README.md  SETUP_GUIDE.md  app.py  install_requirements.bat  install_requirements.sh  pyproject.toml  replit.md  run_backend.py  setup_local.py  start_services.py
backend/: main.py
backend/models/: schemas.py
backend/services/: azure_openai_service.py  bm25_retriever.py  contextual_retriever.py  document_processor.py  vector_store.py
backend/utils/: file_utils.py
